--- a/package.json
+++ b/package.json
@@ -108,6 +108,8 @@
     }
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "date-fns": "^2.28.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
