--- a/package.json
+++ b/package.json
@@ -108,8 +108,10 @@
     }
   },
   "dependencies": {
+    "@adobe/react-spectrum": "^3.35.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@internationalized/date": "^3.5.4",
     "date-fns": "^2.28.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
