--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.35.1",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@internationalized/date": "^3.5.4",
